<?xml version="1.0" encoding="utf-8"?>
<!-- to do 화면 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingTop="?android:attr/actionBarSize">

    <!-- to do 화면의 상단 탭 네 개짜리 -->
    <com.google.android.material.tabs.TabLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tab"
        app:tabIndicatorColor="@android:color/black"
        app:tabSelectedTextColor="@color/cardview_dark_background">
        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_daily"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tab_daily"/>
        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_weekly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tab_weekly"/>
        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_monthly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tab_monthly"/>
        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_yearly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tab_yearly"/>
    </com.google.android.material.tabs.TabLayout>

    <!-- 상단 탭에 해당하는 각 화면이 들어감 -->
    <androidx.viewpager.widget.ViewPager
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/viewPager" />

    <!--
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="할 일 화면" />
        -->


    <!-- 할 일 생성 버튼 -->
    <!--
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_create_todo"
        android:text="할 일 생성" />
        -->

</LinearLayout>