<?xml version="1.0" encoding="utf-8"?><!-- 할 일 생성 화면 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="?android:attr/actionBarSize"
    tools:context=".CreateTodoActivity">

    <EditText
        android:id="@+id/editText_todo_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="17dp"
        android:hint="@string/editText_todo_title"
        android:textColorHint="@color/colorGray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_category"
            android:textSize="17dp"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"/>

        <Spinner
            android:id="@+id/spinner_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_date"
            android:textSize="17dp"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:layout_gravity="center_vertical"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/btn_choose_date"
            android:text="2020. 06. 01"
            android:textSize="17dp"
            android:background="@drawable/custom_button_calander"
            android:layout_marginLeft="17dp"/>
        <!--<DatePicker
            android:id="@+id/dataPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"
            android:layout_marginLeft="40dp"/>-->
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_priority"
            android:textSize="17dp"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"/>

        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/btn_priority_top"
            android:text="@string/btn_priority_top"
            android:textSize="17dp"
            android:background="@drawable/custom_button_priority"
            android:layout_marginLeft="65dp"
            android:layout_marginRight="13dp"
            android:layout_marginBottom="10dp"/>
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/btn_priority_middle"
            android:text="@string/btn_priority_middle"
            android:textSize="17dp"
            android:background="@drawable/custom_button_priority"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="13dp"
            android:layout_marginBottom="10dp"/>
        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/btn_priority_bottom"
            android:text="@string/btn_priority_bottom"
            android:textSize="17dp"
            android:background="@drawable/custom_button_priority"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="13dp"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>


</LinearLayout>