<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="40dp"
    android:layout_marginLeft="30dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="30dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_todo_title"
            android:letterSpacing="0.01"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="46dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_todo_description"
            android:textSize="14dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal">
        <Button
            android:background="@drawable/custom_button_basic"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_cancel"
            android:text="@string/btn_cancel"
            android:textSize="15dp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:letterSpacing="0.01"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_marginRight="1dp"
            android:layout_marginLeft="2dp"
            tools:targetApi="lollipop"
            android:clickable="true"/>
        <Button
            android:background="@drawable/custom_button_basic"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_ok"
            android:text="@string/btn_ok"
            android:textSize="15dp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:letterSpacing="0.01"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="1dp"
            tools:targetApi="lollipop"
            android:clickable="true"
            android:longClickable="true"/>
    </LinearLayout>

</LinearLayout>