<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="30dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_monthly"
            android:text="@string/text_monthly"
            android:letterSpacing="0.01"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">
        <NumberPicker
            android:id="@+id/monthlyPicker_year"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_margin="10dp"/>
        <NumberPicker
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:id="@+id/monthlyPicker_month"
            android:layout_margin="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal">
        <Button
            android:background="@drawable/custom_button_basic"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_cancel"
            android:text="@string/btn_cancel"
            android:textSize="15dp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:letterSpacing="0.01"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_marginRight="1dp"
            android:layout_marginLeft="2dp"
            tools:targetApi="lollipop"
            android:clickable="true"/>
        <Button
            android:background="@drawable/custom_button_basic"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_ok"
            android:text="@string/btn_ok"
            android:textSize="15dp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:letterSpacing="0.01"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="1dp"
            tools:targetApi="lollipop"
            android:clickable="true"
            android:longClickable="true"/>
    </LinearLayout>
</LinearLayout>